completed main logic, manual test and prepared tests
